--- a/folder-01/styles.css
+++ b/folder-01/styles.css
@@ -12,7 +12,7 @@
     justify-content: center;
 }
 .menu{
-    border: 1px solid white;
+    /* border: 1px solid white; */
     width: 900px;
     padding: 20px;
     display: flex;
@@ -25,3 +25,47 @@
 .login{
     margin-left: 20px;
 }
+.header-container{
+    color: #5995DA;
+    background-color: #D6E9FE;
+    display: flex;
+    justify-content: center;
+}
+.header{
+    width: 900px;
+    height: 300px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.Subscribe,
+.social{
+    /* border: 1px solid #5995DA; */
+    margin: 20px;
+    align-self: flex-end;
+    /* align-items: flex-end; */
+}
+.photo-grid-container{
+    display: flex;
+    justify-content: center;
+}
+.photo-grid{
+    display: flex;
+    width: 900px;
+    justify-content: center;
+    flex-wrap: wrap;
+    flex-direction: row;
+    align-items: center;
+
+}
+.photo-grid-item {
+    /* border: 1px solid #fff; */
+    width: 300px;
+    height: 300px;
+  }
+  .first-item{
+    order: 1;
+  }
+  .last-item{
+    order: -1;
+  }
