--- a/folder-01/styles.css
+++ b/folder-01/styles.css
@@ -69,3 +69,21 @@
   .last-item{
     order: -1;
   }
+  .footer{
+    display: flex;
+    justify-content: space-between;
+  }
+  .footer-item{
+    border: 1px solid white;
+    height: 200PX;
+    background-color: #D6E9FE;
+    flex: 1;
+  }
+  .footer-one,
+  .footer-three{
+    background-color: #5995DA;
+    flex: initial;
+    width: 300px;}
+    .signup{
+        margin-left: auto;
+    }
